# BomberMan

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.sh  Makefile  README.md  bomberman  build.sh  checkBrew.sh  checkExternalLibraries.sh  game  installBrew.sh  installBrewsh.sh  installExternalLibraries.sh  installNanogui.sh  installSOIL.sh  makeTheFuckingDylibWork.sh
Lib/lib1/: Makefile  lib.cpp  lib.hpp
bomberman.dSYM/Contents/: Info.plist
includes/: GameState.hpp  IEntity.hpp  KeyInput.hpp  Mesh.hpp  Model.hpp  SoundEngine.hpp  base.hpp  bomb.hpp  bomber.hpp  camera.hpp  enemy.hpp  game.hpp  handle.hpp  header.hpp  level.hpp  lib.hpp  load.hpp  man.hpp  map.hpp  menu.hpp  object.hpp  shader.hpp
res/graphics/models/: bomb.mtl
res/graphics/models/0open/ground/: cube.mtl
res/graphics/models/0open/groundBomber/: cube.mtl
res/graphics/models/1bomberman/walk/: walk05.mtl
res/graphics/models/2bomb/: untitled.mtl
res/graphics/models/3enemy/walk/: walk23.mtl
res/graphics/models/Bomberman00/: Running.dae
res/graphics/models/bomber1/running/: Bomber1Running01.mtl
res/graphics/models/enemyZombie00/: Walking.dae
res/graphics/models/untitled folder/: Running.dae
src/: GameState.cpp  Mesh.cpp  Model.cpp  SoundEngine.cpp  base.cpp  bomb.cpp  bomber.cpp  camera.cpp  enemy.cpp  game.cpp  handle.cpp  level.cpp  lib.cpp  load.cpp  main.cpp  man.cpp  map.cpp  menu.cpp  object.cpp  overflow.cpp  shader.cpp
